@@ -38,7 +38,7 @@ public class ItemTagsUtils {
 			return itemStack;
 
 		// Clear Tags
-		itemStack = clearTags(itemStack);
+		clearTags(itemStack);
 
 		// Add Tag: Condition
 		itemStack = addCondition(itemStack, condition);
@@ -54,7 +54,7 @@ public class ItemTagsUtils {
 		String conditionTag = null;
 		String rarityTag = null;
 
-		List<String> lore = itemStack.getLore();
+		List<String> lore = getLore(itemStack);
 
 
 		if (lore != null && lore.size() > 0) {
@@ -103,59 +103,45 @@ public class ItemTagsUtils {
 			if (rarityTag != null)
 				lore.add(rarityTag);
 
-			itemStack.setLore(lore);
+			setLore(itemStack, lore);
 		}
 		return itemStack;
 	}
 
-	public static ItemStack clearTags(ItemStack itemStack) {
-
+	public static void clearTags(ItemStack itemStack) {
 		clearCondition(itemStack);
 		clearRarity(itemStack);
 
-		return itemStack;
 	}
 
-	public static ItemStack clearRarity(ItemStack itemStack) {
-		List<String> lore = itemStack.getLore();
+	public static void clearRarity(ItemStack itemStack) {
+		List<String> lore = getLore(itemStack);
 		if (lore != null && lore.size() > 0) {
-			for (Rarity _rarity : Rarity.values()) {
-				int ndx = 0;
-				for (String line : new ArrayList<>(lore)) {
-					String tag = stripColor(_rarity.getTag());
-					String _line = stripColor(line);
-
-					if (tag.equalsIgnoreCase(_line))
-						lore.remove(ndx);
-					++ndx;
-				}
-			}
-
-			itemStack.setLore(lore);
+			clearTags(lore, Arrays.stream(Rarity.values()).map(Rarity::getTag).toList());
+			setLore(itemStack, lore);
 		}
-
-		return itemStack;
 	}
 
-	public static ItemStack clearCondition(ItemStack itemStack) {
-		List<String> lore = itemStack.getLore();
+	public static void clearCondition(ItemStack itemStack) {
+		List<String> lore = getLore(itemStack);
 		if (lore != null && lore.size() > 0) {
-			for (Condition _condition : Condition.values()) {
-				int ndx = 0;
-				for (String line : new ArrayList<>(lore)) {
-					String tag = stripColor(_condition.getTag());
-					String _line = stripColor(line);
-
-					if (tag.equalsIgnoreCase(_line))
-						lore.remove(ndx);
-					++ndx;
-				}
-			}
-
-			itemStack.setLore(lore);
+			clearTags(lore, Arrays.stream(Condition.values()).map(Condition::getTag).toList());
+			setLore(itemStack, lore);
 		}
+	}
 
-		return itemStack;
+	private static void clearTags(List<String> lore, List<String> tags) {
+		for (String tag : tags) {
+			int ndx = 0;
+			for (String line : new ArrayList<>(lore)) {
+				String _tag = stripColor(tag);
+				String _line = stripColor(line);
+
+				if (_tag.equalsIgnoreCase(_line))
+					lore.remove(ndx);
+				++ndx;
+			}
+		}
 	}
 
 	public static ItemStack addRarity(ItemStack itemStack, Rarity rarity) {
@@ -163,20 +149,11 @@ public class ItemTagsUtils {
 	}
 
 	public static ItemStack addRarity(ItemStack itemStack, Rarity rarity, boolean clear) {
-		// Clear Rarity Tag
 		if (clear)
 			clearRarity(itemStack);
 
-		if (rarity != null) {
-			List<String> lore = itemStack.getLore();
-			String rarityTag = rarity.getTag();
-
-			if (lore == null)
-				lore = new ArrayList<>();
-
-			lore.add(rarityTag);
-			itemStack.setLore(lore);
-		}
+		if (rarity != null)
+			setTag(itemStack, rarity.getTag());
 
 		return itemStack;
 	}
@@ -189,18 +166,20 @@ public class ItemTagsUtils {
 		if (clear)
 			clearCondition(itemStack);
 
-		if (condition != null) {
-			List<String> lore = itemStack.getLore();
-			String conditionTag = condition.getTag();
-
-			if (lore == null)
-				lore = new ArrayList<>();
-
-			lore.add(conditionTag);
-			itemStack.setLore(lore);
-		}
+		if (condition != null)
+			setTag(itemStack, condition.getTag());
 
 		return itemStack;
+	}
+
+	private static void setTag(ItemStack itemStack, String tag) {
+		List<String> lore = getLore(itemStack);
+
+		if (lore == null)
+			lore = new ArrayList<>();
+
+		lore.add(tag);
+		setLore(itemStack, lore);
 	}
 
 	public static boolean isArmor(ItemStack itemStack) {
@@ -212,7 +191,7 @@ public class ItemTagsUtils {
 
 	public static boolean isTool(ItemStack itemStack) {
 		Material type = itemStack.getType();
-		List<Material> uniqueTools = Arrays.asList(Material.SHIELD);
+		List<Material> uniqueTools = List.of(Material.SHIELD);
 
 		if (uniqueTools.contains(type))
 			return true;
@@ -225,11 +204,20 @@ public class ItemTagsUtils {
 		String nbtString;
 		if (nbtItem.hasNBTData()) {
 			nbtString = nbtItem.toString();
-			if (nbtString.contains("MYTHIC_TYPE"))
-				return true;
+			return nbtString.contains("MYTHIC_TYPE");
 		}
 
 		return false;
+	}
+
+	@SuppressWarnings("deprecation")
+	private static List<String> getLore(ItemStack itemStack) {
+		return itemStack.getLore();
+	}
+
+	@SuppressWarnings("deprecation")
+	private static void setLore(ItemStack itemStack, List<String> lore) {
+		itemStack.setLore(lore);
 	}
 }
 
